Update README and dependencies